fix(nav): hide horizontal scrollbar on category navigation for mobile and tablet

--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,11 @@ body{
     background: #999;
   }
 }
-/* hide scrollbar for chrome, safari and opera */
-.no-scrollbar::-webkit-scrollbar {
-    display: none;
+/* Hide scrollbar but keep scroll functionality */
+.scrollbar-none {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
 }
-
-/* hide scrollbar for IE, Edge and Firefox */
-.no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+.scrollbar-none::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari, Opera */
 }
